<resources>
    <string name="app_name">Bezpiecznik</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_grid">Create grid</string>
    <string name="rozmiar_siatki">Rozmiar siatki</string>
    <string name="x">X</string>
    <string name="dodaj_siatk">Dodaj siatkę</string>
    <string name="tworzenie_siatki">Tworzenie siatki</string>
    <string name="lista_siatek">Lista siatek</string>
    <string name="nowy_kod">Nowy kod</string>
    <string name="grid_size">%1$d x %2$d</string>
    <string name="export">Eksport</string>
    <string name="import_txt">Import</string>
    <string name="export_desc">Funkcja eksportu danych pozwala zapisać Ci wszystkie twoje kodu i siatki, aby móc potem je odtworzyć na innym urządzeniu.</string>
    <string name="import_desc">Funkcja importu pozwala Ci na odtworzenie zapisanych siatek i kodów z innego urządzenia.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bezpiecznik">BEZPIECZNIK</string>
    <string name="autorzy_n_mateusz_bereta_n_damian_tka_n_jakub_sydor_n_tymoteusz_kubica">Autorzy: \n Mateusz Bereta \n Damian Łątka \n Jakub Sydor \n Tymoteusz Kubica</string>
    <string name="tester_bezpiecze_stwa_kodu_wzorcowego">Tester bezpieczeństwa kodu wzorcowego</string>
    <string name="rozpocznij">Rozpocznij</string>
</resources>