<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bezpiecznik.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_grid_creator"
        android:name="com.example.bezpiecznik.ui.gridCreator.GridCreatorFragment"
        android:label="@string/tworzenie_siatki"
        tools:layout="@layout/grid_creator_fragment" />
    <fragment
        android:id="@+id/nav_grid_list"
        android:name="com.example.bezpiecznik.ui.gridList.GridListFragment"
        android:label="@string/lista_siatek"
        tools:layout="@layout/grid_list_fragment" />

</navigation>